# doxybook2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
example/: Doxyfile  index.html
include/Doxybook/: Config.hpp  Node.hpp  TextMarkdownPrinter.hpp
src/Doxybook/: CMakeLists.txt  Config.cpp  DefaultTemplates.cpp  Node.cpp  TextMarkdownPrinter.cpp  Utils.cpp
src/DoxybookCli/: CMakeLists.txt  main.cpp
tests/DoxybookTests/: CMakeLists.txt
